--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -81,9 +81,9 @@
 }
 
 .images-container{
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
   /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
-  padding: 12px
+  padding: 1px
 }
 
 .pointer{
