--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -528,6 +528,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: 0px;
 }
 
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
 .top-20 {
   top: 5rem;
 }
@@ -556,22 +564,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 120%;
 }
 
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.bottom-16 {
-  bottom: 4rem;
-}
-
-.bottom-14 {
-  bottom: 3.5rem;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
 .z-50 {
   z-index: 50;
 }
@@ -588,16 +580,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 0;
 }
 
+.z-40 {
+  z-index: 40;
+}
+
+.m-\[18px\] {
+  margin: 18px;
+}
+
 .m-3 {
   margin: 0.75rem;
 }
 
 .m-2 {
   margin: 0.5rem;
-}
-
-.m-\[18px\] {
-  margin: 18px;
 }
 
 .mx-0\.5 {
@@ -676,6 +672,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1rem;
 }
 
+.mr-8 {
+  margin-right: 2rem;
+}
+
 .block {
   display: block;
 }
@@ -696,12 +696,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-.h-1\/3 {
-  height: 33.333333%;
-}
-
 .h-full {
   height: 100%;
+}
+
+.h-1\/3 {
+  height: 33.333333%;
 }
 
 .h-72 {
@@ -720,8 +720,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 6rem;
 }
 
-.h-16 {
-  height: 4rem;
+.h-\[70\%\] {
+  height: 70%;
 }
 
 .h-8 {
@@ -732,8 +732,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 46px;
 }
 
-.h-7 {
-  height: 1.75rem;
+.h-\[56\.6vh\] {
+  height: 56.6vh;
+}
+
+.h-\[30\%\] {
+  height: 30%;
 }
 
 .h-36 {
@@ -742,6 +746,34 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-12 {
   height: 3rem;
+}
+
+.h-3\.5 {
+  height: 0.875rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-\[35vh\] {
+  height: 35vh;
+}
+
+.h-\[4\%\] {
+  height: 4%;
+}
+
+.h-\[58\%\] {
+  height: 58%;
+}
+
+.h-\[38\%\] {
+  height: 38%;
+}
+
+.h-\[56\.8vh\] {
+  height: 56.8vh;
 }
 
 .min-h-fit {
@@ -774,8 +806,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 54px;
 }
 
-.w-5\/12 {
-  width: 41.666667%;
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .w-6 {
@@ -790,8 +824,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 3rem;
 }
 
-.w-\[103px\] {
-  width: 103px;
+.w-3\.5 {
+  width: 0.875rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-\[100vh\] {
+  width: 100vh;
+}
+
+.w-\[100vw\] {
+  width: 100vw;
+}
+
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .min-w-fit {
@@ -838,6 +888,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.scale-50 {
+  --tw-scale-x: .5;
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-125 {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .scale-x-\[3\.7\] {
   --tw-scale-x: 3.7;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -854,6 +916,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
 }
 
 .flex-row {
@@ -908,6 +974,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow-x: hidden;
 }
 
+.rounded-\[20px\] {
+  border-radius: 20px;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -922,10 +992,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-\[20px\] {
-  border-radius: 20px;
 }
 
 .border {
@@ -944,10 +1010,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-width: 1px;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
 .border-b-4 {
   border-bottom-width: 4px;
 }
@@ -962,14 +1024,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(100 116 139 / var(--tw-border-opacity));
 }
 
-.bg-\[\#612E01\] {
+.bg-\[\#D0C9C0\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(97 46 1 / var(--tw-bg-opacity));
+  background-color: rgb(208 201 192 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+.bg-\[\#5E5946B2\] {
+  background-color: #5E5946B2;
 }
 
 .bg-\[\#FFFBE9\] {
@@ -997,21 +1058,32 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#D0C9C0\] {
+.bg-\[\#827272\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(208 201 192 / var(--tw-bg-opacity));
+  background-color: rgb(130 114 114 / var(--tw-bg-opacity));
 }
 
-.bg-\[rgba\(94\2c 89\2c 70\2c 0\.7\)\] {
-  background-color: rgba(94,89,70,0.7);
+.bg-\[\#ffffff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#5E5946B2\] {
-  background-color: #5E5946B2;
+.bg-\[\#FFFFFF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-\[18px\] {
+  padding: 18px;
 }
 
 .p-2 {
@@ -1026,8 +1098,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 1.25rem;
 }
 
-.p-\[18px\] {
-  padding: 18px;
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .py-1\.5 {
@@ -1060,31 +1138,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .pl-1 {
   padding-left: 0.25rem;
 }
@@ -1105,6 +1158,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 0.75rem;
 }
 
+.pt-\[5vh\] {
+  padding-top: 5vh;
+}
+
+.pt-\[4\.5vh\] {
+  padding-top: 4.5vh;
+}
+
+.pr-8 {
+  padding-right: 2rem;
+}
+
+.pr-7 {
+  padding-right: 1.75rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1117,6 +1186,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-family: 'Noto Sans Armenian';
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1125,11 +1204,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .text-lg {
@@ -1141,30 +1215,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 14px;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.font-medium {
+  font-weight: 500;
 }
 
 .font-normal {
   font-weight: 400;
 }
 
-.font-medium {
-  font-weight: 500;
-}
-
 .font-semibold {
   font-weight: 600;
 }
 
-.font-bold {
-  font-weight: 700;
+.text-\[\#F2ECE9\] {
+  --tw-text-opacity: 1;
+  color: rgb(242 236 233 / var(--tw-text-opacity));
 }
 
 .text-slate-500 {
@@ -1207,17 +1272,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(234 88 12 / var(--tw-text-opacity));
 }
 
-.text-\[\#F2ECE9\] {
-  --tw-text-opacity: 1;
-  color: rgb(242 236 233 / var(--tw-text-opacity));
-}
-
 .opacity-100 {
   opacity: 1;
 }
 
 .opacity-0 {
   opacity: 0;
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .shadow-3xl {
@@ -1316,16 +1380,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   outline-offset: 2px;
 }
 
-.focus\:ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-inset:focus {
-  --tw-ring-inset: inset;
-}
-
 @media (min-width: 640px) {
   .sm\:static {
     position: static;
@@ -1340,10 +1394,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .sm\:ml-6 {
     margin-left: 1.5rem;
-  }
-
-  .sm\:w-2\/3 {
-    width: 66.666667%;
   }
 
   .sm\:items-stretch {
@@ -1377,6 +1427,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     display: block;
   }
 
+  .md\:grid {
+    display: grid;
+  }
+
   .md\:hidden {
     display: none;
   }
@@ -1385,8 +1439,40 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 18rem;
   }
 
+  .md\:h-\[20\%\] {
+    height: 20%;
+  }
+
+  .md\:h-\[25\%\] {
+    height: 25%;
+  }
+
+  .md\:h-\[8\%\] {
+    height: 8%;
+  }
+
+  .md\:h-\[6\%\] {
+    height: 6%;
+  }
+
+  .md\:h-\[5\%\] {
+    height: 5%;
+  }
+
+  .md\:h-\[70\%\] {
+    height: 70%;
+  }
+
   .md\:w-96 {
     width: 24rem;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
